Fix bug related to content overflow behaviour

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  overflow: auto;
   z-index: 101;
 
   background-color: $text-color;
@@ -207,12 +208,14 @@ button#show-form {
   position: fixed;
   top: 0;
   left: 0;
+  overflow: auto;
+  z-index: 101;
 
   width: 100%;
   height: 100%;
   padding: 30px;
 
-  background-color: rgba(0, 0, 0, 0.95);
+  background-color: rgba(0, 0, 0, 0.9);
   color: $text-color;
 
   h1 {
