--- a/src/layout/overlay.scss
+++ b/src/layout/overlay.scss
@@ -1,5 +1,5 @@
 .overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 100;
   position: fixed;
   top: 0;
